--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
 
 .App {
   align-items: center;
@@ -113,4 +113,100 @@ form input {
 input:focus,
 button:focus {
   outline: none;
+} */
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+ [type="checkbox"]{
+  position: absolute;
+  opacity:0;
+  width: 18px;
+  height: 18px;
+  margin-left: -20px;
+  z-index: 1;
+}
+
+[type="checkbox"] + label{
+position: relative;
+padding-left: 3px;
+margin-right: 30px;
+cursor: pointer;
+display: inline-block;
+color: #666;
+}
+
+[type="checkbox"] + label::before{
+  content:"";
+  position: absolute;
+  left:-20px;
+  top:0;
+  width: 18px;
+  height:18px;
+  outline:2px solid #aaa;
+  background: #fff;
+  z-index: -1;
+}
+
+[type="checkbox"]:checked +label::before{
+  content:"";
+  position: absolute;
+  left:-20px;
+  top:0;
+  width: 18px;
+  height:18px;
+  outline:2px solid #5fd25f;
+  background: #fff;
+  z-index: -1;
+}
+
+[type="checkbox"]:checked +label::after{
+  content:"";
+  position: absolute;
+  left:-20px;
+  top:0;
+  width: 18px;
+  height:18px;
+  background-image:url(./images/done-big.png);
+  background-size:contain;
+  transform:scale(1);
+  opacity:1;
+  transition:all .3s ease;
+  z-index: -1;
+} 
+
+[type="checkbox"]:not(:checked) +label::after{
+  content:"";
+  position: absolute;
+  left:0;
+  top:0;
+  width: 18px;
+  height:18px;
+  background-image:url(./images/done-big.png);
+  background-size:contain;
+  transform:scale(0);
+  opacity:0;
+  transition: all .3s ease
+} 
+
+
+input[type=checkbox]:checked + label.strikethrough{
+  text-decoration: line-through;
+}
+
+#strikethrough{
+  width:61vw;
+  word-wrap: break-word;
+}
+
