--- a/src/App.css
+++ b/src/App.css
@@ -134,14 +134,13 @@ code {
   opacity:0;
   width: 18px;
   height: 18px;
-  margin-left: -20px;
+  /* margin-left: -20px; */
   z-index: 1;
 }
 
 [type="checkbox"] + label{
 position: relative;
-padding-left: 3px;
-margin-right: 30px;
+padding-left: 22px;
 cursor: pointer;
 display: inline-block;
 color: #666;
@@ -150,7 +149,7 @@ color: #666;
 [type="checkbox"] + label::before{
   content:"";
   position: absolute;
-  left:-20px;
+  left:0px;
   top:0;
   width: 18px;
   height:18px;
@@ -162,7 +161,7 @@ color: #666;
 [type="checkbox"]:checked +label::before{
   content:"";
   position: absolute;
-  left:-20px;
+  left:0px;
   top:0;
   width: 18px;
   height:18px;
@@ -174,7 +173,7 @@ color: #666;
 [type="checkbox"]:checked +label::after{
   content:"";
   position: absolute;
-  left:-20px;
+  left:0px;
   top:0;
   width: 18px;
   height:18px;
@@ -206,7 +205,7 @@ input[type=checkbox]:checked + label.strikethrough{
 }
 
 #strikethrough{
-  width:61vw;
+  width:71vw;
   word-wrap: break-word;
 }
 
